// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExperimentDetails > fetches this experiment's recurring runs 1`] = `
<DocumentFragment>
  <div
    class="kfp-theme"
    data-theme="light"
  >
    <div
      class="kfp-workflow-page"
    >
      <div
        class="kfp-workflow-content"
      >
        <div
          class="kfp-workflow-cards"
        >
          <section
            aria-label="Recurring run configs"
            class="kfp-workflow-card"
            id="recurringRunsCard"
          >
            <div
              class="kfp-workflow-card-heading"
            >
              <h2>
                Recurring run configs
              </h2>
              <button
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground h-8 px-2.5"
                data-slot="button"
                id="manageExperimentRecurringRunsBtn"
                tabindex="0"
                type="button"
              >
                Manage
              </button>
            </div>
            <div
              class="kfp-workflow-card-count"
              data-active=""
            >
              1 active
            </div>
          </section>
          <section
            aria-label="Experiment description"
            class="kfp-workflow-card"
            id="experimentDescriptionCard"
          >
            <div
              class="kfp-workflow-card-heading"
            >
              <h2>
                Experiment description
              </h2>
              <button
                aria-label="Read more"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                data-slot="button"
                id="expandExperimentDescriptionBtn"
                tabindex="0"
                title="Read more"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-external-link"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 3h6v6"
                  />
                  <path
                    d="M10 14 21 3"
                  />
                  <path
                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                  />
                </svg>
              </button>
            </div>
            <div
              class="kfp-workflow-description-line"
            >
              mock experiment description
            </div>
          </section>
        </div>
        <header
          class="kfp-page-header"
          data-embedded="true"
        >
          <div
            class="kfp-page-heading"
          >
            <div
              class="kfp-page-title-row"
            >
              <h2
                data-testid="page-title"
              >
                Runs
              </h2>
            </div>
          </div>
          <div
            class="kfp-page-actions"
          >
            <span
              style="min-width: 130px;"
              title="Create a new run"
            >
              <button
                aria-description="Create a new run"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 h-[34px] px-3"
                data-slot="button"
                id="createNewRunBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                Create run
              </button>
            </span>
            <span
              style="min-width: 195px;"
              title="Create a new recurring run"
            >
              <button
                aria-description="Create a new recurring run"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-slot="button"
                id="createNewRecurringRunBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-repeat"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m17 2 4 4-4 4"
                  />
                  <path
                    d="M3 11v-1a4 4 0 0 1 4-4h14"
                  />
                  <path
                    d="m7 22-4-4 4-4"
                  />
                  <path
                    d="M21 13v1a4 4 0 0 1-4 4H3"
                  />
                </svg>
                Create recurring run
              </button>
            </span>
            <span
              style="min-width: 125px;"
              title="Select multiple runs to compare"
            >
              <button
                aria-description="Select multiple runs to compare"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-disabled=""
                data-slot="button"
                disabled=""
                id="compareBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-git-compare-arrows"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="5"
                    cy="6"
                    r="3"
                  />
                  <path
                    d="M12 6h5a2 2 0 0 1 2 2v7"
                  />
                  <path
                    d="m15 9-3-3 3-3"
                  />
                  <circle
                    cx="19"
                    cy="18"
                    r="3"
                  />
                  <path
                    d="M12 18H7a2 2 0 0 1-2-2V9"
                  />
                  <path
                    d="m9 15 3 3-3 3"
                  />
                </svg>
                Compare runs
              </button>
            </span>
            <span
              style="min-width: 100px;"
              title="Select a run to clone"
            >
              <button
                aria-description="Select a run to clone"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-disabled=""
                data-slot="button"
                disabled=""
                id="cloneBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-copy"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="14"
                    rx="2"
                    ry="2"
                    width="14"
                    x="8"
                    y="8"
                  />
                  <path
                    d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                  />
                </svg>
                Clone run
              </button>
            </span>
            <span
              title="Select at least one resource to archive"
            >
              <button
                aria-description="Select at least one resource to archive"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-disabled=""
                data-slot="button"
                disabled=""
                id="archiveBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-archive"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="5"
                    rx="1"
                    width="20"
                    x="2"
                    y="3"
                  />
                  <path
                    d="M4 8v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8"
                  />
                  <path
                    d="M10 12h4"
                  />
                </svg>
                Archive
              </button>
            </span>
          </div>
        </header>
        <div
          class="kfp-workflow-content"
        >
          <div
            class="kfp-inspection-tabs"
            data-activation-direction="none"
            data-orientation="horizontal"
          >
            <div
              aria-label="Experiment runs"
              class="kfp-inspection-tab-list"
              data-activation-direction="none"
              data-orientation="horizontal"
              role="tablist"
            >
              <button
                aria-controls="base-ui-_r_2j_"
                aria-disabled="false"
                aria-selected="true"
                class="kfp-inspection-tab"
                data-activation-direction="none"
                data-active=""
                data-composite-item-active=""
                data-orientation="horizontal"
                id="base-ui-_r_2h_"
                role="tab"
                tabindex="0"
                type="button"
              >
                Active
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                class="kfp-inspection-tab"
                data-activation-direction="none"
                data-orientation="horizontal"
                id="base-ui-_r_2i_"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Archived
              </button>
            </div>
            <div
              aria-labelledby="base-ui-_r_2h_"
              class="kfp-inspection-tab-panel"
              data-activation-direction="none"
              data-index="0"
              data-orientation="horizontal"
              id="base-ui-_r_2j_"
              role="tabpanel"
              tabindex="0"
            >
              <div
                class="kfp-runs-table-view"
              >
                <div
                  class="kfp-runs-table-view kfp-runs-data-table"
                >
                  <div
                    class="kfp-runs-filter-row"
                  >
                    <label
                      for="react-use-id-0"
                    >
                      Filter runs by name
                    </label>
                    <input
                      class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
                      data-slot="input"
                      id="react-use-id-0"
                      placeholder="Filter runs by name"
                      type="search"
                      value=""
                    />
                  </div>
                  <div
                    class="kfp-runs-table-card"
                  >
                    <div
                      aria-label="Runs table"
                      class="kfp-runs-table-scroll"
                      role="region"
                      tabindex="0"
                    >
                      <table
                        aria-busy="false"
                        aria-label="Runs"
                        class="kfp-runs-table"
                        style="min-width: 1100px; table-layout: fixed;"
                      >
                        <colgroup>
                          <col
                            style="width: 46px;"
                          />
                          <col />
                          <col
                            style="width: 116px;"
                          />
                          <col
                            style="width: 160px;"
                          />
                          <col
                            style="width: 100px;"
                          />
                          <col
                            style="width: 140px;"
                          />
                          <col
                            style="width: 170px;"
                          />
                        </colgroup>
                        <thead>
                          <tr>
                            <th
                              class="kfp-runs-selection"
                              scope="col"
                            >
                              <span
                                aria-checked="false"
                                aria-disabled="true"
                                aria-label="Select all runs on this page"
                                class="kfp-checkbox"
                                data-disabled=""
                                data-unchecked=""
                                id="base-ui-_r_2n_"
                                role="checkbox"
                                tabindex="-1"
                              />
                              <input
                                aria-hidden="true"
                                disabled=""
                                id="base-ui-_r_2o_"
                                style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
                                tabindex="-1"
                                type="checkbox"
                              />
                            </th>
                            <th
                              scope="col"
                            >
                              Run
                            </th>
                            <th
                              scope="col"
                            >
                              Status
                            </th>
                            <th
                              scope="col"
                            >
                              Pipeline version
                            </th>
                            <th
                              scope="col"
                            >
                              Duration
                            </th>
                            <th
                              scope="col"
                            >
                              Recurring Run
                            </th>
                            <th
                              scope="col"
                            >
                              Started
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="kfp-runs-empty"
                              colspan="7"
                            >
                              No available runs found for this experiment.
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <div
                      class="kfp-runs-table-footer"
                    >
                      <span
                        aria-live="polite"
                        role="status"
                      />
                      <div
                        class="kfp-runs-pagination"
                      >
                        <label
                          for="react-use-id-1"
                        >
                          Rows per page
                        </label>
                        <select
                          id="react-use-id-1"
                        >
                          <option
                            value="10"
                          >
                            10
                          </option>
                          <option
                            value="20"
                          >
                            20
                          </option>
                          <option
                            value="50"
                          >
                            50
                          </option>
                          <option
                            value="100"
                          >
                            100
                          </option>
                        </select>
                        <button
                          aria-label="Previous page"
                          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                          data-disabled=""
                          data-slot="button"
                          data-testid="prev-page-btn"
                          disabled=""
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-left"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m15 18-6-6 6-6"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="Next page"
                          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                          data-disabled=""
                          data-slot="button"
                          data-testid="next-page-btn"
                          disabled=""
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-right"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m9 18 6-6-6-6"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentDetails > renders a page with no runs or recurring runs 1`] = `
<DocumentFragment>
  <div
    class="kfp-theme"
    data-theme="light"
  >
    <div
      class="kfp-workflow-page"
    >
      <div
        class="kfp-workflow-content"
      >
        <div
          class="kfp-workflow-cards"
        >
          <section
            aria-label="Recurring run configs"
            class="kfp-workflow-card"
            id="recurringRunsCard"
          >
            <div
              class="kfp-workflow-card-heading"
            >
              <h2>
                Recurring run configs
              </h2>
              <button
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground h-8 px-2.5"
                data-slot="button"
                id="manageExperimentRecurringRunsBtn"
                tabindex="0"
                type="button"
              >
                Manage
              </button>
            </div>
            <div
              class="kfp-workflow-card-count"
            >
              0 active
            </div>
          </section>
          <section
            aria-label="Experiment description"
            class="kfp-workflow-card"
            id="experimentDescriptionCard"
          >
            <div
              class="kfp-workflow-card-heading"
            >
              <h2>
                Experiment description
              </h2>
              <button
                aria-label="Read more"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                data-slot="button"
                id="expandExperimentDescriptionBtn"
                tabindex="0"
                title="Read more"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-external-link"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 3h6v6"
                  />
                  <path
                    d="M10 14 21 3"
                  />
                  <path
                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                  />
                </svg>
              </button>
            </div>
            <div
              class="kfp-workflow-description-line"
            >
              mock experiment description
            </div>
          </section>
        </div>
        <header
          class="kfp-page-header"
          data-embedded="true"
        >
          <div
            class="kfp-page-heading"
          >
            <div
              class="kfp-page-title-row"
            >
              <h2
                data-testid="page-title"
              >
                Runs
              </h2>
            </div>
          </div>
          <div
            class="kfp-page-actions"
          >
            <span
              style="min-width: 130px;"
              title="Create a new run"
            >
              <button
                aria-description="Create a new run"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 h-[34px] px-3"
                data-slot="button"
                id="createNewRunBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                Create run
              </button>
            </span>
            <span
              style="min-width: 195px;"
              title="Create a new recurring run"
            >
              <button
                aria-description="Create a new recurring run"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-slot="button"
                id="createNewRecurringRunBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-repeat"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m17 2 4 4-4 4"
                  />
                  <path
                    d="M3 11v-1a4 4 0 0 1 4-4h14"
                  />
                  <path
                    d="m7 22-4-4 4-4"
                  />
                  <path
                    d="M21 13v1a4 4 0 0 1-4 4H3"
                  />
                </svg>
                Create recurring run
              </button>
            </span>
            <span
              style="min-width: 125px;"
              title="Select multiple runs to compare"
            >
              <button
                aria-description="Select multiple runs to compare"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-disabled=""
                data-slot="button"
                disabled=""
                id="compareBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-git-compare-arrows"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="5"
                    cy="6"
                    r="3"
                  />
                  <path
                    d="M12 6h5a2 2 0 0 1 2 2v7"
                  />
                  <path
                    d="m15 9-3-3 3-3"
                  />
                  <circle
                    cx="19"
                    cy="18"
                    r="3"
                  />
                  <path
                    d="M12 18H7a2 2 0 0 1-2-2V9"
                  />
                  <path
                    d="m9 15 3 3-3 3"
                  />
                </svg>
                Compare runs
              </button>
            </span>
            <span
              style="min-width: 100px;"
              title="Select a run to clone"
            >
              <button
                aria-description="Select a run to clone"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-disabled=""
                data-slot="button"
                disabled=""
                id="cloneBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-copy"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="14"
                    rx="2"
                    ry="2"
                    width="14"
                    x="8"
                    y="8"
                  />
                  <path
                    d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                  />
                </svg>
                Clone run
              </button>
            </span>
            <span
              title="Select at least one resource to archive"
            >
              <button
                aria-description="Select at least one resource to archive"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-disabled=""
                data-slot="button"
                disabled=""
                id="archiveBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-archive"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="5"
                    rx="1"
                    width="20"
                    x="2"
                    y="3"
                  />
                  <path
                    d="M4 8v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8"
                  />
                  <path
                    d="M10 12h4"
                  />
                </svg>
                Archive
              </button>
            </span>
          </div>
        </header>
        <div
          class="kfp-workflow-content"
        >
          <div
            class="kfp-inspection-tabs"
            data-activation-direction="none"
            data-orientation="horizontal"
          >
            <div
              aria-label="Experiment runs"
              class="kfp-inspection-tab-list"
              data-activation-direction="none"
              data-orientation="horizontal"
              role="tablist"
            >
              <button
                aria-controls="base-ui-_r_2_"
                aria-disabled="false"
                aria-selected="true"
                class="kfp-inspection-tab"
                data-activation-direction="none"
                data-active=""
                data-composite-item-active=""
                data-orientation="horizontal"
                id="base-ui-_r_0_"
                role="tab"
                tabindex="0"
                type="button"
              >
                Active
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                class="kfp-inspection-tab"
                data-activation-direction="none"
                data-orientation="horizontal"
                id="base-ui-_r_1_"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Archived
              </button>
            </div>
            <div
              aria-labelledby="base-ui-_r_0_"
              class="kfp-inspection-tab-panel"
              data-activation-direction="none"
              data-index="0"
              data-orientation="horizontal"
              id="base-ui-_r_2_"
              role="tabpanel"
              tabindex="0"
            >
              <div
                class="kfp-runs-table-view"
              >
                <div
                  class="kfp-runs-table-view kfp-runs-data-table"
                >
                  <div
                    class="kfp-runs-filter-row"
                  >
                    <label
                      for="react-use-id-0"
                    >
                      Filter runs by name
                    </label>
                    <input
                      class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
                      data-slot="input"
                      id="react-use-id-0"
                      placeholder="Filter runs by name"
                      type="search"
                      value=""
                    />
                  </div>
                  <div
                    class="kfp-runs-table-card"
                  >
                    <div
                      aria-label="Runs table"
                      class="kfp-runs-table-scroll"
                      role="region"
                      tabindex="0"
                    >
                      <table
                        aria-busy="false"
                        aria-label="Runs"
                        class="kfp-runs-table"
                        style="min-width: 1100px; table-layout: fixed;"
                      >
                        <colgroup>
                          <col
                            style="width: 46px;"
                          />
                          <col />
                          <col
                            style="width: 116px;"
                          />
                          <col
                            style="width: 160px;"
                          />
                          <col
                            style="width: 100px;"
                          />
                          <col
                            style="width: 140px;"
                          />
                          <col
                            style="width: 170px;"
                          />
                        </colgroup>
                        <thead>
                          <tr>
                            <th
                              class="kfp-runs-selection"
                              scope="col"
                            >
                              <span
                                aria-checked="false"
                                aria-disabled="true"
                                aria-label="Select all runs on this page"
                                class="kfp-checkbox"
                                data-disabled=""
                                data-unchecked=""
                                id="base-ui-_r_6_"
                                role="checkbox"
                                tabindex="-1"
                              />
                              <input
                                aria-hidden="true"
                                disabled=""
                                id="base-ui-_r_7_"
                                style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
                                tabindex="-1"
                                type="checkbox"
                              />
                            </th>
                            <th
                              scope="col"
                            >
                              Run
                            </th>
                            <th
                              scope="col"
                            >
                              Status
                            </th>
                            <th
                              scope="col"
                            >
                              Pipeline version
                            </th>
                            <th
                              scope="col"
                            >
                              Duration
                            </th>
                            <th
                              scope="col"
                            >
                              Recurring Run
                            </th>
                            <th
                              scope="col"
                            >
                              Started
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="kfp-runs-empty"
                              colspan="7"
                            >
                              No available runs found for this experiment.
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <div
                      class="kfp-runs-table-footer"
                    >
                      <span
                        aria-live="polite"
                        role="status"
                      />
                      <div
                        class="kfp-runs-pagination"
                      >
                        <label
                          for="react-use-id-1"
                        >
                          Rows per page
                        </label>
                        <select
                          id="react-use-id-1"
                        >
                          <option
                            value="10"
                          >
                            10
                          </option>
                          <option
                            value="20"
                          >
                            20
                          </option>
                          <option
                            value="50"
                          >
                            50
                          </option>
                          <option
                            value="100"
                          >
                            100
                          </option>
                        </select>
                        <button
                          aria-label="Previous page"
                          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                          data-disabled=""
                          data-slot="button"
                          data-testid="prev-page-btn"
                          disabled=""
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-left"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m15 18-6-6 6-6"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="Next page"
                          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                          data-disabled=""
                          data-slot="button"
                          data-testid="next-page-btn"
                          disabled=""
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-right"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m9 18 6-6-6-6"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentDetails > uses an empty string if the experiment has no description 1`] = `
<DocumentFragment>
  <div
    class="kfp-theme"
    data-theme="light"
  >
    <div
      class="kfp-workflow-page"
    >
      <div
        class="kfp-workflow-content"
      >
        <div
          class="kfp-workflow-cards"
        >
          <section
            aria-label="Recurring run configs"
            class="kfp-workflow-card"
            id="recurringRunsCard"
          >
            <div
              class="kfp-workflow-card-heading"
            >
              <h2>
                Recurring run configs
              </h2>
              <button
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground h-8 px-2.5"
                data-slot="button"
                id="manageExperimentRecurringRunsBtn"
                tabindex="0"
                type="button"
              >
                Manage
              </button>
            </div>
            <div
              class="kfp-workflow-card-count"
            >
              0 active
            </div>
          </section>
          <section
            aria-label="Experiment description"
            class="kfp-workflow-card"
            id="experimentDescriptionCard"
          >
            <div
              class="kfp-workflow-card-heading"
            >
              <h2>
                Experiment description
              </h2>
              <button
                aria-label="Read more"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                data-slot="button"
                id="expandExperimentDescriptionBtn"
                tabindex="0"
                title="Read more"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-external-link"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 3h6v6"
                  />
                  <path
                    d="M10 14 21 3"
                  />
                  <path
                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                  />
                </svg>
              </button>
            </div>
            <div
              class="kfp-workflow-description-line"
            />
          </section>
        </div>
        <header
          class="kfp-page-header"
          data-embedded="true"
        >
          <div
            class="kfp-page-heading"
          >
            <div
              class="kfp-page-title-row"
            >
              <h2
                data-testid="page-title"
              >
                Runs
              </h2>
            </div>
          </div>
          <div
            class="kfp-page-actions"
          >
            <span
              style="min-width: 130px;"
              title="Create a new run"
            >
              <button
                aria-description="Create a new run"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-primary text-primary-foreground hover:brightness-95 h-[34px] px-3"
                data-slot="button"
                id="createNewRunBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                Create run
              </button>
            </span>
            <span
              style="min-width: 195px;"
              title="Create a new recurring run"
            >
              <button
                aria-description="Create a new recurring run"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-slot="button"
                id="createNewRecurringRunBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-repeat"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m17 2 4 4-4 4"
                  />
                  <path
                    d="M3 11v-1a4 4 0 0 1 4-4h14"
                  />
                  <path
                    d="m7 22-4-4 4-4"
                  />
                  <path
                    d="M21 13v1a4 4 0 0 1-4 4H3"
                  />
                </svg>
                Create recurring run
              </button>
            </span>
            <span
              style="min-width: 125px;"
              title="Select multiple runs to compare"
            >
              <button
                aria-description="Select multiple runs to compare"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-disabled=""
                data-slot="button"
                disabled=""
                id="compareBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-git-compare-arrows"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="5"
                    cy="6"
                    r="3"
                  />
                  <path
                    d="M12 6h5a2 2 0 0 1 2 2v7"
                  />
                  <path
                    d="m15 9-3-3 3-3"
                  />
                  <circle
                    cx="19"
                    cy="18"
                    r="3"
                  />
                  <path
                    d="M12 18H7a2 2 0 0 1-2-2V9"
                  />
                  <path
                    d="m9 15 3 3-3 3"
                  />
                </svg>
                Compare runs
              </button>
            </span>
            <span
              style="min-width: 100px;"
              title="Select a run to clone"
            >
              <button
                aria-description="Select a run to clone"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-disabled=""
                data-slot="button"
                disabled=""
                id="cloneBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-copy"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="14"
                    rx="2"
                    ry="2"
                    width="14"
                    x="8"
                    y="8"
                  />
                  <path
                    d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                  />
                </svg>
                Clone run
              </button>
            </span>
            <span
              title="Select at least one resource to archive"
            >
              <button
                aria-description="Select at least one resource to archive"
                class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-border-strong bg-card text-foreground hover:bg-muted h-[34px] px-3"
                data-disabled=""
                data-slot="button"
                disabled=""
                id="archiveBtn"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-archive"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="5"
                    rx="1"
                    width="20"
                    x="2"
                    y="3"
                  />
                  <path
                    d="M4 8v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8"
                  />
                  <path
                    d="M10 12h4"
                  />
                </svg>
                Archive
              </button>
            </span>
          </div>
        </header>
        <div
          class="kfp-workflow-content"
        >
          <div
            class="kfp-inspection-tabs"
            data-activation-direction="none"
            data-orientation="horizontal"
          >
            <div
              aria-label="Experiment runs"
              class="kfp-inspection-tab-list"
              data-activation-direction="none"
              data-orientation="horizontal"
              role="tablist"
            >
              <button
                aria-controls="base-ui-_r_t_"
                aria-disabled="false"
                aria-selected="true"
                class="kfp-inspection-tab"
                data-activation-direction="none"
                data-active=""
                data-composite-item-active=""
                data-orientation="horizontal"
                id="base-ui-_r_r_"
                role="tab"
                tabindex="0"
                type="button"
              >
                Active
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                class="kfp-inspection-tab"
                data-activation-direction="none"
                data-orientation="horizontal"
                id="base-ui-_r_s_"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Archived
              </button>
            </div>
            <div
              aria-labelledby="base-ui-_r_r_"
              class="kfp-inspection-tab-panel"
              data-activation-direction="none"
              data-index="0"
              data-orientation="horizontal"
              id="base-ui-_r_t_"
              role="tabpanel"
              tabindex="0"
            >
              <div
                class="kfp-runs-table-view"
              >
                <div
                  class="kfp-runs-table-view kfp-runs-data-table"
                >
                  <div
                    class="kfp-runs-filter-row"
                  >
                    <label
                      for="react-use-id-0"
                    >
                      Filter runs by name
                    </label>
                    <input
                      class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
                      data-slot="input"
                      id="react-use-id-0"
                      placeholder="Filter runs by name"
                      type="search"
                      value=""
                    />
                  </div>
                  <div
                    class="kfp-runs-table-card"
                  >
                    <div
                      aria-label="Runs table"
                      class="kfp-runs-table-scroll"
                      role="region"
                      tabindex="0"
                    >
                      <table
                        aria-busy="false"
                        aria-label="Runs"
                        class="kfp-runs-table"
                        style="min-width: 1100px; table-layout: fixed;"
                      >
                        <colgroup>
                          <col
                            style="width: 46px;"
                          />
                          <col />
                          <col
                            style="width: 116px;"
                          />
                          <col
                            style="width: 160px;"
                          />
                          <col
                            style="width: 100px;"
                          />
                          <col
                            style="width: 140px;"
                          />
                          <col
                            style="width: 170px;"
                          />
                        </colgroup>
                        <thead>
                          <tr>
                            <th
                              class="kfp-runs-selection"
                              scope="col"
                            >
                              <span
                                aria-checked="false"
                                aria-disabled="true"
                                aria-label="Select all runs on this page"
                                class="kfp-checkbox"
                                data-disabled=""
                                data-unchecked=""
                                id="base-ui-_r_11_"
                                role="checkbox"
                                tabindex="-1"
                              />
                              <input
                                aria-hidden="true"
                                disabled=""
                                id="base-ui-_r_12_"
                                style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
                                tabindex="-1"
                                type="checkbox"
                              />
                            </th>
                            <th
                              scope="col"
                            >
                              Run
                            </th>
                            <th
                              scope="col"
                            >
                              Status
                            </th>
                            <th
                              scope="col"
                            >
                              Pipeline version
                            </th>
                            <th
                              scope="col"
                            >
                              Duration
                            </th>
                            <th
                              scope="col"
                            >
                              Recurring Run
                            </th>
                            <th
                              scope="col"
                            >
                              Started
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="kfp-runs-empty"
                              colspan="7"
                            >
                              No available runs found for this experiment.
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <div
                      class="kfp-runs-table-footer"
                    >
                      <span
                        aria-live="polite"
                        role="status"
                      />
                      <div
                        class="kfp-runs-pagination"
                      >
                        <label
                          for="react-use-id-1"
                        >
                          Rows per page
                        </label>
                        <select
                          id="react-use-id-1"
                        >
                          <option
                            value="10"
                          >
                            10
                          </option>
                          <option
                            value="20"
                          >
                            20
                          </option>
                          <option
                            value="50"
                          >
                            50
                          </option>
                          <option
                            value="100"
                          >
                            100
                          </option>
                        </select>
                        <button
                          aria-label="Previous page"
                          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                          data-disabled=""
                          data-slot="button"
                          data-testid="prev-page-btn"
                          disabled=""
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-left"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m15 18-6-6 6-6"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="Next page"
                          class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                          data-disabled=""
                          data-slot="button"
                          data-testid="next-page-btn"
                          disabled=""
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-chevron-right"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m9 18 6-6-6-6"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
